@@ -1,0 +1,8 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<RequiredPackages xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="D:\dev\GoogleCode\Opus\trunk\bin\Debug\Schema\OpusPackageDependency.xsd">
+  <Package Name="FileUtilities" Version="dev" />
+  <Package Name="Mingw" Version="3.4.5" />
+  <Package Name="NativeBuilder" Version="dev" />
+  <Package Name="VisualC" Version="9.0" />
+  <Package Name="WindowsSDK" Version="6.0A" />
+</RequiredPackages>
