@@ -1,0 +1,6 @@
+#include "dynamicLibraryA.h"
+
+char *dynamicLibraryAFunction()
+{
+    return "From DynamicLibraryA";
+}
